一次修改，添加第一次界面、逻辑、模型 这三者的使用实例（未完成）

--- a/Osutility_Beta/Osutility_Beta/View/BeatMapView.xaml
+++ b/Osutility_Beta/Osutility_Beta/View/BeatMapView.xaml
@@ -24,6 +24,7 @@
                     </MenuItem>
                 </Menu>
                 <ToolBar>
+                    <Button Content="刷新列表" Command=""/>
                     <CheckBox Content="显示啥"/>
                     <Separator/>
                     <CheckBox Content="显示你"/>
