json获取值的部分实现

--- a/Osutility_Beta/Osutility_Beta/App.xaml
+++ b/Osutility_Beta/Osutility_Beta/App.xaml
@@ -5,7 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:vm="clr-namespace:Osutility_Beta.ViewModel"
              mc:Ignorable="d"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+              Exit="Application_Exit">
     
     <Application.Resources>
         <ResourceDictionary>
